--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
-        <a class="brand" href="#"><span style="color:#4b4b4b">Cv </span><span style="color:#0094BD;"> Builder</span></a>
+        <a class="brand" href="/"><span style="color:#4b4b4b">Cv </span><span style="color:#0094BD;"> Builder</span></a>
         <div class="nav-collapse">
           <ul class="nav">
             <li><%= link_to "About" %></li>
