finally wickedpdf resume conversion has been implemented successfully yey yey

--- a/app/views/widgets/_create_pdf.html.erb
+++ b/app/views/widgets/_create_pdf.html.erb
@@ -2,4 +2,15 @@
   <div class="header">
     <p style="text-align:center;font-size: 18px;padding-top: 5px;">Create PDF</p>
   </div>
+  <div class="padding-5" >
+    <div class="grey-feed" style="height:35px;">
+      <div class="float-left">
+        <%= image_tag '/assets/pdf_cv.jpg',:style=>"width:autox;height:auto;" %>
+      </div>
+      <div class="float-left margin-left-15">
+        <%= link_to "Download PDF Cv", download_cv_path %>
+      </div>
+
+    </div>
+  </div>
 </div>
