download pdf cv ..thems has been started

--- a/app/views/download/download_cv.html.erb
+++ b/app/views/download/download_cv.html.erb
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-	</head>
+  <head>
+    <style type="text/css">
+<%= render :file => "#{Rails.root.to_path}/app/assets/stylesheets/preview.css", :content_type => 'application/css' %>
+<%= render :file => "#{Rails.root.to_path}/app/assets/stylesheets/general.css", :content_type => 'application/css' %>
+    </style>
+  </head>
+  <body>
+    <div class="cl-10"></div>
+    <div>
+      <%= render :partial=>"/download/pdf_cv" %>
+    </div>
 
-	<body>
-		<div class="cl-10"></div>
-
-		<div id="DIV_CV_BUILDER_MAIN" class="<% @format == "html" ? "span12" : "" %>" style="<% @format == "html" ? "margin:20px;padding:20px;" : "width:1170px margin:0px;padding:0px;" %>">
-			  <%= render :partial=>"/download/pdf_cv" %>
-		</div>
-
-		<div class="cl-30"></div>
-	</body>
+    <div class="cl-30"></div>
+  </body>
 </html>
