--- a/app/views/download/_pdf_cv.html.erb
+++ b/app/views/download/_pdf_cv.html.erb
@@ -1,20 +1,24 @@
-<div>
+<div id="DIV_CV_BUILDER_MAIN" class="span12"  style="margin:20px;padding:20px;margin:0px;padding:0px;">
 
-  <h1><% @user.name %></h1>
-  <h5 style="color:#4B4B4B"><%= @linkedin_details && @linkedin_details.headline ? @linkedin_details.headline : '' %></h5>
-   <span style="color: #08C;"><%= @linkedin_details.email ? @linkedin_details.email : current_user.email %></span><br/>
+  <!-- Body part -->
+  <div>
+
+    <h1 style="text-align:center;font-size: 30px;"><%= @user.name %></h1>
+    <div class="cl-15"></div>
+    <span style="color: #000;"><b>Email : </b><%= @linkedin_details.email ? @linkedin_details.email : current_user.email %></span><br/>
     <% if @linkedin_details && @linkedin_details.personal_website %>
-        <%= link_to "#{@linkedin_details.personal_website}" , @linkedin_details.personal_website %>
-        <div class="cl-3"></div>
-      <% end %>
-      <% if @linkedin_details && @linkedin_details.twitter_account %>
-        <%= link_to "@#{@linkedin_details.twitter_account}" , "http://twitter.com/#{@linkedin_details.twitter_account}"%>
-        <div class="cl-3"></div>
-      <% end %>
-      <% if @linkedin_details && @linkedin_details.public_profile_url %>
-        <%= link_to "#{@linkedin_details.public_profile_url}" , @linkedin_details.public_profile_url %>
-        <div class="cl-3"></div>
-      <% end %>
-        <p style="color:#4B4B4B;"><%= @linkedin_details && @linkedin_details.main_address ? @linkedin_details.main_address : '' %></p>
-        <div class="cl"></div>
+      <span style="color: #000;"><b>Personal Website : </b><%= link_to "#{@linkedin_details.personal_website}" , @linkedin_details.personal_website %></span>
+      <div class="cl-3"></div>
+    <% end %>
+    <% if @linkedin_details && @linkedin_details.twitter_account %>
+      <span style="color: #000;"><b>Twitter : </b><%= link_to "@#{@linkedin_details.twitter_account}" , "http://twitter.com/#{@linkedin_details.twitter_account}"%></span>
+      <div class="cl-3"></div>
+    <% end %>
+    <% if @linkedin_details && @linkedin_details.public_profile_url %>
+      <span style="color: #000;"><b>Linkedin : </b> <%= link_to "#{@linkedin_details.public_profile_url}" , @linkedin_details.public_profile_url %></span>
+      <div class="cl-3"></div>
+    <% end %>
+    <span style="color:#000;"><b>Address : </b><%= @linkedin_details && @linkedin_details.main_address ? @linkedin_details.main_address : '' %></span>
+    <div class="cl"></div>
+  </div>
 </div>
