--- a/app/views/download/download_cv.html.erb
+++ b/app/views/download/download_cv.html.erb
@@ -6,7 +6,7 @@
 <%= render :file => "#{Rails.root.to_path}/app/assets/stylesheets/general.css", :content_type => 'application/css' %>
     </style>
   </head>
-  <body>
+  <body class="container" style="width: 940px;">
     <div class="cl-10"></div>
     <div>
       <%= render :partial=>"/download/pdf_cv" %>
