--- a/app/views/download/_pdf_cv.html.erb
+++ b/app/views/download/_pdf_cv.html.erb
@@ -1,24 +1,62 @@
-<div id="DIV_CV_BUILDER_MAIN" class="span12"  style="margin:20px;padding:20px;margin:0px;padding:0px;">
+<div class="span12"  style="padding:1px;margin-top:20px;margin-left: 5px;margin-right: 5px;color:#000;font-family: 'Times New Roman'; width: 940px;">
 
-  <!-- Body part -->
-  <div>
+  <h1 style="text-align:center;font-size: 40px;"><%= @user.name %></h1>
+  <div class="cl-15"></div>
 
-    <h1 style="text-align:center;font-size: 30px;"><%= @user.name %></h1>
-    <div class="cl-15"></div>
-    <span style="color: #000;"><b>Email : </b><%= @linkedin_details.email ? @linkedin_details.email : current_user.email %></span><br/>
+  <!-- Basic Info Block -->
+  <div class="span10" style="font-size:15px;border: 2px solid #000;width: 780px;">
+    <div><b>Email : </b><%= @linkedin_details.email ? @linkedin_details.email : current_user.email %></div>
+    <div class="cl-2"></div>
     <% if @linkedin_details && @linkedin_details.personal_website %>
-      <span style="color: #000;"><b>Personal Website : </b><%= link_to "#{@linkedin_details.personal_website}" , @linkedin_details.personal_website %></span>
-      <div class="cl-3"></div>
+      <div><b>Website : </b><%= link_to "#{@linkedin_details.personal_website}" , @linkedin_details.personal_website , :style=>"color:#000;" %></div>
+      <div class="cl-2"></div>
     <% end %>
     <% if @linkedin_details && @linkedin_details.twitter_account %>
-      <span style="color: #000;"><b>Twitter : </b><%= link_to "@#{@linkedin_details.twitter_account}" , "http://twitter.com/#{@linkedin_details.twitter_account}"%></span>
-      <div class="cl-3"></div>
+      <div><b>Twitter : </b><%= link_to "@#{@linkedin_details.twitter_account}" , "http://twitter.com/#{@linkedin_details.twitter_account}" , :style=>"color:#000;"%></div>
+      <div class="cl-2"></div>
     <% end %>
     <% if @linkedin_details && @linkedin_details.public_profile_url %>
-      <span style="color: #000;"><b>Linkedin : </b> <%= link_to "#{@linkedin_details.public_profile_url}" , @linkedin_details.public_profile_url %></span>
-      <div class="cl-3"></div>
+      <div><b>Linkedin : </b> <%= link_to "#{@linkedin_details.public_profile_url}" , @linkedin_details.public_profile_url ,:style=>"color:#000;"  %></div>
+      <div class="cl-2"></div>
     <% end %>
-    <span style="color:#000;"><b>Address : </b><%= @linkedin_details && @linkedin_details.main_address ? @linkedin_details.main_address : '' %></span>
-    <div class="cl"></div>
+    <div><b>Address : </b><%= @linkedin_details && @linkedin_details.main_address ? @linkedin_details.main_address : '' %></div>
+    <div class="cl-2"></div>
   </div>
+  <!-- Basic Info Block -->
+  <div class="cl-10"></div>
+  <!-- Experience Block -->
+  <div>
+    <h4>Experience</h4>
+    <% if @experience_details && @experience_details.any? %>
+      <% @experience_details.each do |exp| %>
+        <div class="row-fluid">
+          <div class="span8" style="border: 2px solid #000;width: 620px;">
+            <% if exp.title %>
+              <h5 style="line-height:5px;"><%= exp.title %></h5>
+            <% end %>
+            <% if exp.company_name %>
+              <div class="cl"></div>
+              <div style="font-size: 17px;font-style: italic;float: left;"><%= exp.company_name %></div>
+            <% end %>
+            <% if exp.industry_name %>
+              <div class="cl"></div>
+              <div style="font-size: 15px;font-style: italic;"><%= exp.industry_name %> Industry</div>
+            <% end %>
+          </div>
+          <div class="span3" style="float:right;border: 2px solid #000;width: 250px;">
+            <div style="float:right;">
+              <% if exp.is_current %>
+                <div><%= Date.strptime("#{exp.start_date.to_s}", "%d , %m,  %Y").strftime('%b %Y') %> to <%= exp.end_date %></div>
+              <% else %>
+                <div><%= Date.strptime("#{exp.start_date.to_s}", "%d , %m,  %Y").strftime('%b %Y') %> to <%= Date.strptime("#{exp.end_date.to_s}", "%d , %m, %Y").strftime('%b %Y') %></div>
+              <% end %>
+            </div>
+          </div>
+          <div class="cl"></div>
+        </div>
+      <% end %>
+    <% end %>
+    <div class="cl-10"></div>
+  </div>
+  <div class="cl"></div>
 </div>
