--- a/app/views/users/dashboard/_basic_info.html.erb
+++ b/app/views/users/dashboard/_basic_info.html.erb
@@ -7,7 +7,7 @@
     <div class="span5" style="width:380px;margin-left:30px;">
       <h2 style="color:#4B4B4B;margin-top: 0px;font-family: 'open-sans'"><%= @user.name %></h2>
       <h5 style="color:#4B4B4B"><%= @linkedin_details && @linkedin_details.headline ? @linkedin_details.headline : '' %></h5>
-      <span style="color: #08C;"><%= @linkedin_details.email ? @linkedin_details.email : current_user.email %></span>
+      <span style="color: #08C;"><%= @linkedin_details && @linkedin_details.email ? @linkedin_details.email : current_user.email %></span>
         <div class="cl-3"></div>
       <% if @linkedin_details && @linkedin_details.personal_website %>
         <%= link_to "#{@linkedin_details.personal_website}" , @linkedin_details.personal_website %>
