--- a/app/views/layouts/_common_scripts.html.erb
+++ b/app/views/layouts/_common_scripts.html.erb
@@ -1,5 +1,5 @@
-<%#= stylesheet_link_tag    "bootstrap-wysihtml5" %>
-<%#= javascript_include_tag "bootstrap-wysihtml5" %>
+<%= stylesheet_link_tag    "bootstrap-wysihtml5" %>
+<%= javascript_include_tag "bootstrap-wysihtml5" %>
 <script type="text/javascript">
 
   // Initializing all popovers - it should be initialized outside the document ready
