--- a/app/views/widgets/_create_pdf.html.erb
+++ b/app/views/widgets/_create_pdf.html.erb
@@ -8,7 +8,7 @@
         <%= image_tag '/assets/pdf_cv.jpg',:style=>"width:autox;height:auto;" %>
       </div>
       <div class="float-left margin-left-15">
-        <%= link_to "Download PDF Cv", preview_path , :remote => true %>
+        <%= link_to "Download PDF Cv", preview_path %>
       </div>
 
     </div>
