--- a/app/views/download/download_cv.html.erb
+++ b/app/views/download/download_cv.html.erb
@@ -6,9 +6,9 @@
 <%= render :file => "#{Rails.root.to_path}/app/assets/stylesheets/general.css", :content_type => 'application/css' %>
     </style>
   </head>
-  <body class="container" style="width: 940px;">
+  <body class="container" style="width: 970px;height:1430px;">
     <div class="cl-10"></div>
-    <div>
+     <div>
       <%= render :partial=>"/download/pdf_cv" %>
     </div>
 
