--- a/app/views/download/sections/_basic_info.html.erb
+++ b/app/views/download/sections/_basic_info.html.erb
@@ -1,6 +1,6 @@
 <div class="span10" style="font-size:20px;width:920px;margin-left: 10px;margin-right:10px;">
 
-  <div><b>Email: </b><%= linkedin_details.email ? linkedin_details.email : current_user.email %></div>
+  <div><b>Email: </b><%= linkedin_details && linkedin_details.email ? linkedin_details.email : current_user.email %></div>
   <div class="cl-4"></div>
   <% if linkedin_details && linkedin_details.personal_website %>
     <div><b>Website : </b><%= link_to "#{linkedin_details.personal_website}" , linkedin_details.personal_website , :style=>"color:blue;" %></div>
@@ -14,6 +14,8 @@
     <div><b>Phone : </b> <%= linkedin_details.phone_number %></div>
     <div class="cl-4"></div>
   <% end %>
-  <div><b>Address : </b><%= linkedin_details && linkedin_details.main_address ? linkedin_details.main_address : '' %></div>
+    <% if linkedin_details && linkedin_details.main_address  %>
+  <div><b>Address : </b><%= linkedin_details.main_address %></div>
+  <% end %>
   <div class="cl-4"></div>
 </div>
