new thems for downloading cvs has been updated

--- a/app/views/download/_preview.html.erb
+++ b/app/views/download/_preview.html.erb
@@ -1,5 +1,7 @@
+ <%= link_to "Download PDF", download_cv_path(:theme => 'simple')  , :class=>"btn btn-success" , :style=>"float:right;margin-right:10px;" %>
+<div class="cl-10"></div>
 <div class="span12"  style="padding:5px;margin-top:20px;margin-left: 10px;border: 0px solid #898989; border-radius: 3pt;
-     box-shadow:1px 1px 20px #c1c1c1; color:#000;width:950px;font-family: 'Times New Roman';">
+     box-shadow:1px 1px 20px #c1c1c1; color:#000;width:950px;">
 
   <!-- Name -->
 
