--- a/app/views/download/theme/_simple.html.erb
+++ b/app/views/download/theme/_simple.html.erb
@@ -1,8 +1,11 @@
-<div class="span12"  style="padding:5px;top:5px;bottom: 5px;left: 5px;right:5px;color:#000;width:950px;">
+ <%= link_to "Download PDF", download_cv_path(:theme => 'simple')  , :class=>"btn btn-success" , :style=>"float:right;margin-right:10px;" %>
+<div class="cl-10"></div>
+<div class="span12"  style="padding-left:10px;margin-top:20px;margin-left: 10px;border: 0px solid #898989; border-radius: 3pt;
+     box-shadow:1px 1px 20px #c1c1c1; color:#000;width:950px;background-color: #fff;">
 
-<!-- Name -->
+  <!-- Name -->
 
-  <h1 style="" class="title"><%= @user.name %></h1>
+  <h1 style="text-align:center;font-size: 40px;margin-top: 30px;"><%= @user.name %></h1>
   <div class="cl-15"></div>
 
   <!-- Name -->
@@ -45,4 +48,6 @@
   <%= render :partial=>"/download/sections/simple/github" ,:locals =>{:github_details => @github_details} %>
 
   <div class="cl-10"></div>
+
 </div>
+<div class="cl-50"></div>
